Updated the release command.

--- a/projects/cloudflare/package.json
+++ b/projects/cloudflare/package.json
@@ -1,8 +1,8 @@
 {
     "name": "lkr-construction",
     "scripts": {
-      "dev": "shadow-cljs watch app server -A:dev & npm run styles-dev",
-      "release": "shadow-cljs -A:dev release app server && npm run styles-release",
+      "dev": "shadow-cljs watch server -A:dev & npm run styles-dev",
+      "release": "shadow-cljs release server",
       "styles-dev": "npx @tailwindcss/cli -i ../../components/web/resources/public/core.css -o ./public/main.css --watch",
       "styles-release": "npx @tailwindcss/cli -i ./src/app/core.css -o ./public/main.css --minify"
     },
