--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,10 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v4
+      - name: Install clojure tools
+        uses: DeLaGuardo/setup-clojure@11.0
+        with:
+          cli: 1.11.1.1347
       - name: Build the nodejs app
         run: |
           cd ./projects/cloudflare/
@@ -40,6 +44,7 @@ jobs:
   terraform-plan:
     name: Suggest chages if any
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
       - name: Setup Terraform
