--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
           cd ./projects/cloudflare/
           npm install
           npm run release
-          ls -l
-          cp build/server.js terraform/
+          ls -l out/
+          cp out/server.js terraform/
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
