--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Deploy with Terraform
         env:
           TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          TF_VAR_cloudflare_account_id: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          TF_VAR_google_application_credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
 
         run: |
             cd ./projects/cloudflare/terraform
